--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,8 @@
     </div>
     
     <button id="refresh-button">Get Another Random Drink</button>
+
+    <a href="/search">Search for a Drink!</a>
     
     <script>
         // JavaScript to load a random drink when the page loads
