--- a/templates/results.html
+++ b/templates/results.html
@@ -8,6 +8,14 @@
     <title>Search Results</title>
 </head>
 <body>
+    <nav>
+        {% if not g.user %}
+        <a href="/signup">Sign Up</a>
+        <a href="/login">Log In</a>
+        {% else %}
+        <a href="/logout">Log Out</a>
+        {% endif %}
+    </nav>
     <h1>Cocktail Search Results</h1>
     
     {% if cocktails %}
