--- a/templates/searchform.html
+++ b/templates/searchform.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <nav>
+        <a href="/">HOME</a>
         {% if not g.user %}
         <a href="/signup">Sign Up</a>
         <a href="/login">Log In</a>
