--- a/static/app.css
+++ b/static/app.css
@@ -1,3 +1,46 @@
+/* NAV BAR STYLES */
+
+nav {
+    background-color: rgb(71, 71, 255);
+    color: antiquewhite;
+    padding: 10px;
+}
+
+nav a:visited {
+    color: antiquewhite
+}
+
+nav a {
+    text-decoration: none;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+nav a:hover {
+    text-decoration: underline;
+}
+
+/* GENERAL PAGE STYLES */
+
+h1 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: rgb(242, 72, 86);
+}
+
+/* LINK STYLES */
+
+a:visited {
+    color: rgb(191, 44, 56);
+}
+
+a {
+    text-decoration: none; 
+}
+
+a:hover {
+    color: rgb(56, 179, 255);
+}
+
 .thumb {
     max-width: 150px;
 }
