--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
         <a href="/login">Log In</a>
         {% else %}
         <a href="/logout">Log Out</a>
+        <a href="/liked_drinks">My Drinks</a>
         {% endif %}
     </nav>
     <h1>Page's Cocktail Extravaganza</h1>
