--- a/templates/index.html
+++ b/templates/index.html
@@ -20,12 +20,12 @@
     </nav>
     <h1>Page's Cocktail Extravaganza</h1>
     <h2>Drink of the Day:</h2>
-<div id="drink-container">
-    <h2 id="drink-name"><a id="drink-link" href="{{ url_for('drink_details', drink_id=drink.idDrink) }}">{{ drink.strDrink }}</a></h2>
-    <p id="drink-category"><strong>Category:</strong></p>
-    <p id="drink-ingredients"><strong>Ingredients:</strong></p>
-    <p id="drink-instructions"><strong>Instructions:</strong></p>
-</div>
+    <div id="drink-container">
+        <h2 id="drink-name"><a id="drink-link" href="{{ url_for('drink_details', drink_id='') }}"></a></h2>
+        <p id="drink-category"><strong>Category:</strong></p>
+        <p id="drink-ingredients"><strong>Ingredients:</strong></p>
+        <p id="drink-instructions"><strong>Instructions:</strong></p>
+    </div>
 
 <button id="refresh-button">Get Another Random Drink</button>
 <a href="/search">Search for a Drink!</a>
@@ -60,7 +60,7 @@
                         initialDrink = drink; // Store the initial drink
                     }
                     document.getElementById("drink-link").textContent = drink.strDrink;
-                    document.getElementById("drink-link").href = "{{ url_for('drink_details', drink_id=" + drink.idDrink + ") }}";
+                    document.getElementById("drink-link").href = "{{ url_for('drink_details', drink_id='' ) }}"+ drink.idDrink;
                     document.getElementById("drink-category").textContent = `Category: ${drink.strCategory}`;
                     const ingredients = `${drink.strIngredient1}, ${drink.strIngredient2}, ...`;
                     document.getElementById("drink-ingredients").textContent = `Ingredients: ${ingredients}`;
