--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,8 @@
     </div>
 
 <button id="refresh-button">Get Another Random Drink</button>
-<a href="/search">Search for a Drink!</a>
+<a href="/search">Search for a Drink by Liquor Preference!</a>
+<a href="/othersearch">Search for a Drink by Ingredient!</a>
 
     
 <script>
