--- a/static/app.css
+++ b/static/app.css
@@ -1,23 +1,27 @@
 /* NAV BAR STYLES */
 
 nav {
-    background-color: rgb(71, 71, 255);
-    color: antiquewhite;
+    background-color: rgb(234, 255, 151);
+    color: rgb(36, 97, 47);
     padding: 10px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    transition: ease-in-out .5s;
 }
 
 nav a:visited {
-    color: antiquewhite
+    color: rgb(47, 129, 62);
 }
 
 nav a {
     text-decoration: none;
     padding-left: 10px;
     padding-right: 10px;
+    transition: ease-in-out .3s;
 }
 
 nav a:hover {
-    text-decoration: underline;
+    /* text-decoration: underline; */
+    color: rgb(0, 0, 0)
 }
 
 /* GENERAL PAGE STYLES */
@@ -27,11 +31,58 @@ h1 {
     color: rgb(242, 72, 86);
 }
 
+h2 {
+    color: rgb(242, 72, 86);
+}
+
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 .search {
     /* outline: 1px solid black; */
     color:rgb(242, 72, 86);
     margin-top: 5px;
     margin-bottom: 5px;
+}
+
+/* HOME PAGE */
+
+.index {
+    background-image: url(/static/assets/cocktail.png);
+    background-size: 88%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    min-height: 100vh;
+}
+
+/* #drink-container {
+    background-color: rgba(202, 233, 252, 0.6);
+    width: 50%;
+    padding: 15px;
+} */
+
+
+
+.main-content {
+    margin: 20px; /* Add margin for spacing. */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-grow: 1; /* Allow the content to expand vertically. */
+}
+
+.drink-of-the-day {
+    background-color: rgba(237, 237, 237, 0.6);
+    width: 400px;
+    padding: 15px;
+    text-align: center;
+}
+
+.home-search .search {
+    margin: 10px
 }
 
 /* LINK STYLES */
