--- a/static/app.css
+++ b/static/app.css
@@ -6,6 +6,7 @@ nav {
     padding: 10px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     transition: ease-in-out .5s;
+    width: 100vw;
 }
 
 nav a:visited {
@@ -20,7 +21,6 @@ nav a {
 }
 
 nav a:hover {
-    /* text-decoration: underline; */
     color: rgb(0, 0, 0)
 }
 
@@ -40,7 +40,6 @@ body {
 }
 
 .search {
-    /* outline: 1px solid black; */
     color:rgb(242, 72, 86);
     margin-top: 5px;
     margin-bottom: 5px;
@@ -58,20 +57,9 @@ body {
     min-height: 100vh;
 }
 
-/* #drink-container {
-    background-color: rgba(202, 233, 252, 0.6);
-    width: 50%;
-    padding: 15px;
-} */
-
-
-
 .main-content {
     margin: 20px; /* Add margin for spacing. */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-grow: 1; /* Allow the content to expand vertically. */
+    display: block;
 }
 
 .drink-of-the-day {
@@ -82,7 +70,8 @@ body {
 }
 
 .home-search .search {
-    margin: 10px
+    margin: 10px;
+    display: block;
 }
 
 /* LINK STYLES */
@@ -102,4 +91,23 @@ a:hover {
 
 .thumb {
     max-width: 150px;
+}
+
+/* DRINK DETAILS */
+
+.drink-details {
+    background-image: url(/static/assets/cocktail.png);
+    background-size: 88%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    min-height: 100vh;
+}
+
+.drink-recipe {
+    background-color: rgba(237, 237, 237, 0.6);
+    width: 700px;
+    padding: 15px;
+    text-align: left;
 }
