--- a/templates/drink_details.html
+++ b/templates/drink_details.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"
+        href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
     <link rel="stylesheet" href="/static/app.css">
     <title>{{ strDrink }}</title>
 </head>
-<body>
+<body class="drink-details">
     <nav>
         <a href="/">HOME</a>
         {% if not g.user %}
@@ -18,6 +20,7 @@
         <a href="/liked_drinks">My Drinks</a>
         {% endif %}
     </nav>
+<div class="drink-recipe">
     <h1>{{ drink.strDrink }}</h1>
 <img class="thumb" src="{{ drink.strDrinkThumb }}">
 <p>Category: {{ drink.strCategory }}</p>
@@ -43,6 +46,7 @@
       <i class="fa fa-thumbs-up"></i> 
     </button>
   </form>
+</div>
 <a href="/">Return Home</a>
 </body>
 </html>
