--- a/templates/results.html
+++ b/templates/results.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/static/app.css">
     <title>Search Results</title>
 </head>
-<body>
+<body class="results">
     <nav>
         <a href="/">HOME</a>
         {% if not g.user %}
