--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,7 @@
         <a href="/othersearch" class="search"
           >Search for a Drink by Ingredient!</a
         >
+        <a href="/namesearch" class="search">Search for a Drink by Name!</a>
       </div>
       <div class="drink-of-the-day">
         <h2>Drink of the Day:</h2>
