--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet"
+        href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+    <link rel="stylesheet" href="/static/app.css" />
+    <title>Sign up</title>
 </head>
-<body>
+<body class="log">
     <form method="POST" id="user_form">
         {{ form.hidden_tag() }}
   
