--- a/templates/results.html
+++ b/templates/results.html
@@ -27,8 +27,9 @@
             {% for cocktail in cocktails %}
     <li>
         <strong><a href="{{ url_for('drink_details', drink_id=cocktail.idDrink) }}">{{ cocktail.strDrink }}</a></strong>
-        <img class="thumb" src="{{ cocktail.strDrinkThumb }}">
-        <p>Category: {{ cocktail.strCategory }}</p>
+        <p></p>
+        <a href="{{ url_for('drink_details', drink_id=cocktail.idDrink) }}"><img class="thumb" src="{{ cocktail.strDrinkThumb }}"></a> 
+        <!-- <p>Category: {{ cocktail.strCategory }}</p>
         <p>Ingredients:
             <ul>
                 {% for i in range(1, 16) %}
@@ -42,7 +43,7 @@
                 {% endfor %}
             </ul>
         </p>
-        <p>Instructions: {{ cocktail.strInstructions }}</p>
+        <p>Instructions: {{ cocktail.strInstructions }}</p> -->
     </li>
 {% endfor %}
 
