--- a/templates/drink_details.html
+++ b/templates/drink_details.html
@@ -37,7 +37,7 @@
     {% endfor %}
 </ul>
 <p>Instructions: {{ drink.strInstructions }}</p>
-<form method="POST" action="/users/add_like/{{ drink.id }}" id="drink-likes-form">
+<form method="POST" action="/users/add_like/{{ drink.idDrink }}" id="drink-likes-form">
     <button class="
       btn 
       btn-sm 
