--- a/templates/liked_drinks.html
+++ b/templates/liked_drinks.html
@@ -46,7 +46,7 @@
         </ul>
     {% else %}
         <p>No liked drinks available.</p>
-    {% endif}
+    {% endif %}
     
     <a href="/">Return Home</a>
 </body>
